@@ -17,21 +17,10 @@ import java.util.Base64;
 public class Search {
     static Logger logger = LoggerFactory.getLogger(Search.class);
 
-    public static String search(WeiXinData data){
-        String result = "";
-        try {
-            byte[] imgByte = NetUtil.get(data.getImgUrl());
-            new BASE64Encoder().encode(imgByte);
-            byte[] base64Image = Base64.getEncoder().encode(imgByte);
-            result = search(base64Image);
-        } catch (Exception e) {
-            e.printStackTrace();
-            logger.error("base64 search error:" + JSON.toJSONString(data));
-        }
-        return result;
-    }
+    public static String search(byte[] imgByte) throws IOException {
+        new BASE64Encoder().encode(imgByte);
+        byte[] base64 = Base64.getEncoder().encode(imgByte);
 
-    public static String search(byte[] base64) throws IOException {
         SearchParam searchParam = new SearchParam();
         searchParam.setImage(new String(base64,0,base64.length,"8859_1"));
         Long startTime = System.currentTimeMillis();
@@ -40,6 +29,5 @@ public class Search {
         logger.debug("search time consuming"+(endTime - startTime));
         return response;
     }
-
 
 }
